--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,6 +12,58 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Toggle"
-        android:onClick="onClick"/>
-</RelativeLayout>
+        android:text="Apply"
+        android:onClick="onClick"
+        android:layout_gravity="center_horizontal|bottom" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="db level : 0db"
+        android:id="@+id/textView"
+        android:layout_gravity="left|top" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1) Office"
+        android:id="@+id/checkBox"
+        android:layout_gravity="left|center_vertical"
+        android:layout_marginBottom="50dp" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2) Bedroom"
+        android:id="@+id/checkBox2"
+        android:layout_gravity="left|center_vertical"
+        android:layout_marginBottom="20dp" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="3) Living room"
+        android:id="@+id/checkBox3"
+        android:layout_gravity="left|center_vertical"
+        android:layout_marginTop="10dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:ems="10"
+        android:id="@+id/editDbThreshold"
+        android:layout_gravity="left|top"
+        android:layout_marginTop="50dp"
+        android:hint="Decibal threshold (default = 1000db)" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/editTimeout"
+        android:layout_gravity="left|top"
+        android:layout_marginTop="100dp"
+        android:hint="Light timeout interval (Default 10)" />
+</FrameLayout>
