--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="db level : 0db"
-        android:id="@+id/textView"
+        android:id="@+id/dbLevel"
         android:layout_gravity="left|top" />
 
     <CheckBox
